# AeroGA

./: .gitignore  AeroGA.py  AeroGA2.py  AeroGA_parallel.py  Benchmarks.py  README.md  app.py  ga.py  pull_id.txt  pyproject.toml  report_template.html  requirements.txt  test.py
Interface/: Interface.py
Interface/data/: MDO_2S.xlsx  mdo2s.csv  mdo2s2.csv  mdo3s.csv  mdo3s2.csv
src/AeroGA/: AeroGA.py  Evaluators.py  Operators_Crossover.py  Operators_Mutation.py  Operators_Selection.py  Performance_Metrics.py  Population.py  Utilities.py  classes.py  generate_report.py  settings.py
src/AeroGA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/AeroGA/Classes/: Error.py  Individual.py
src/AeroGA/Operators/: Crossover.py  Evaluators.py  Metrics.py  Mutation.py  Population.py  Selection.py
src/AeroGA/Utilities/: Plots.py  PostProcessing.py  Validity.py  generate_report.py
test/: app.py
