[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AeroGA"
version = "0.0.3"
authors = [
  { name="Krigor Rosa", email="krigorsilva13@gmail.com" },
]
description = "Package description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.5.2",
    "matplotlib-inline==0.1.6",
    "numpy==1.23.0",
    "pandas==1.5.2",
    "plotly==5.9.0",
    "ypstruct==0.0.2",
    "colorlog==6.7.0"
]

[project.urls]
"Homepage" = "https://github.com/equipe-albatroz/AeroGA"