[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AeroGA"
version = "1.0.0"
authors = [
  { name="Krigor Rosa", email="krigorsilva13@gmail.com" },
]
description = "Package description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.2",
    "matplotlib-inline>=0.1.6",
    "numpy>=1.23.0",
    "pandas>=1.5.3",
    "plotly==5.13.0",
    "colorlog==6.7.0",
    "loguru==0.6.0",
    "openpyxl==3.1.2",
    "jinja2>=3.1.2",
    "joblib==1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/equipe-albatroz/AeroGA"